<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_dashboard_black_24dp"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_outline_black_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_glucose"
            android:icon="@drawable/baseline_local_drink_black_24dp"
            android:title="@string/nav_glucose" />
        <item
            android:id="@+id/nav_pressure"
            android:icon="@drawable/baseline_add_to_queue_black_24dp"
            android:title="@string/nav_pressure" />

        <item
            android:id="@+id/nav_medications"
            android:icon="@drawable/baseline_local_pharmacy_black_24dp"
            android:title="@string/nav_medications" />

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/baseline_directions_walk_black_24dp"
            android:title="@string/nav_activities" />


        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/baseline_restaurant_black_24dp"
            android:title="@string/nav_meals" />



        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/baseline_person_outline_black_24dp"
            android:title="@string/nav_bmi" />

        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/baseline_event_note_black_24dp"
            android:title="@string/nav_reminders" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_add_to_queue_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_active_black_24dp"
            android:title="@string/nav_notifications" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>